# sunsehttp

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
sunsehttp/: __init__.py  _http.py  cookie.py
sunsehttp/http/: cookie.py  exceptions.py  resp.py
sunsehttp/server/: __init__.py  _shttp.py  sresp.py
sunsehttp/util/: __init__.py  constants.py  exceptions.py  http_request.py  resp.py
sunsehttp/ws/: __init__.py  _client.py  frame.py
sunsettp/: _http.py
sunsettp/util/: exceptions.py  http_request.py  resp.py
