[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sunsehttp"
authors = [{name = "sunset-hue", email = "sunsetree@proton.me"}]
version = "0.1.0a5"
requires-python = ">=3.11"
description="A http library made for fun :D (only has HTTP and HTTPS support at the moment)"
readme = "README.md"
license = "MIT"
keywords = ["http","library","websockets","ssl","tls"]
classifiers = [
    "Development Status :: 3 - Alpha"
]

[project.urls]
Homepage = "https://github.com/sunset-hue/sunsehttp"
Issues = "https://github.com/sunset-hue/sunsehttp/issues"